--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@reduxjs/toolkit": "^2.3.0",
+    "antd": "^5.21.4",
+    "formik": "^2.4.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.0",
     "react-transition-group": "^4.4.5",
-    "styled-components": "^6.1.13"
+    "redux": "^5.0.1",
+    "redux-toolkit": "^1.1.2",
+    "styled-components": "^6.1.13",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
